# es-ddl-converter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docker/: .env.example  docker-compose.yml  e2e_run.sh
es_ddl_converter/: __init__.py  batch.py  cli.py  config_validator.py  ddl_renderer.py  doris_executor.py  es_client.py  index_strategy.py  mapping_parser.py  table_builder.py  type_mapping.py  warnings.py
es_ddl_converter/templates/: create_table.sql.j2
scripts/: fetch_realworld_fixtures.py
tests/: conftest.py  test_batch.py  test_cli.py  test_config_validator.py  test_ddl_renderer.py  test_doris_executor.py  test_e2e.py  test_es_client.py  test_extract_all_mappings.py  test_index_strategy.py  test_logging_config.py  test_mapping_parser.py  test_realworld_smoke.py  test_table_builder.py  test_type_handlers.py  test_type_mapping.py  test_warnings.py
tests/fixtures/: config_example.yaml  es6_mapping.json  full_example_mapping.json  job_example.yaml  multi_index_mapping.json  simple_mapping.json
tests/fixtures/realworld/: ecs_template.json  jaeger_span.json  kibana_sample_ecommerce.json  kibana_sample_flights.json  kibana_sample_logs.json  rally_dense_vector.json  rally_geonames.json  rally_nested.json  rally_nyc_taxis.json  wazuh_template.json
